# crewai

./: .gitignore
codewithbrandon/sja_crewai_code/crewai_new_features/: 2024-10-19.md  2024-10-20.md  2024-11-16.md  main.py  pyproject.toml  tasks.py
codewithbrandon/trip_planner_from_scratch/: .env_example  agents.py  main.py  pyproject.toml  python3.12.7  tasks.py
codewithbrandon/trip_planner_from_scratch/tools/: calculator_tools.py
crewai_dot_com/latest_ai_development/output/: report.md
crewai_dot_com/latest_ai_development/src/latest_ai_development/: crew.py  main.py
crewai_dot_com/latest_ai_development/src/latest_ai_development/config/: tasks.yaml
crewai_dot_com/summarize_web_page/: README.md  Website_Summary - GraphQL.md  Website_Summary-GraphQL Deployment.md  pyproject.toml
crewai_dot_com/summarize_web_page/src/summarize_web_page/: crew.py  main.py
crewai_dot_com/summarize_web_page/src/summarize_web_page/config/: agents.yaml  tasks.yaml
deeplearning.ai/agent_factory/: pyproject.toml
deeplearning.ai/agent_factory/src/agent_factory/: agent_factory.py
deeplearning.ai/customer_support/: 2025-01-02-customer_support-1.md  2025-01-02-customer_support.md  pyproject.toml
deeplearning.ai/customer_support/customer_support/: customersupport.py  file_io.py
deeplearning.ai/event_planning/: marketing_report.md  pyproject.toml  venue_details.json
deeplearning.ai/event_planning/event_planning/: event_planning.py
deeplearning.ai/financial_analysis/: pyproject.toml
deeplearning.ai/financial_analysis/financial_analysis/: financial_analysis.py
deeplearning.ai/flight_search/: AvailableFlights.json  pyproject.toml
deeplearning.ai/flight_search/flight_search/: flight_search.py
deeplearning.ai/job_application/: interview_materials - 1.md  interview_materials.md  pyproject.toml  tailored_resume - 1.md  tailored_resume.md
deeplearning.ai/job_application/db/: chroma.sqlite3
deeplearning.ai/job_application/job_application/: job_application.py  utils.py
deeplearning.ai/practical_ai_agents/agentic_sales_pipeline/: pyproject.toml
deeplearning.ai/practical_ai_agents/agentic_sales_pipeline/Original_Code/: L_3.py
deeplearning.ai/practical_ai_agents/agentic_sales_pipeline/src/agentic_sales_pipeline/: agentic_sales_pipeline.ipynb  agentic_sales_pipeline.py  helper.py
deeplearning.ai/practical_ai_agents/agentic_sales_pipeline/src/agentic_sales_pipeline/config/: email_engagement_agents.yaml  lead_qualification_agents.yaml
deeplearning.ai/practical_ai_agents/progress_report/: ProgressReport.ipynb  pyproject.toml
deeplearning.ai/practical_ai_agents/progress_report/original_code/: L_2.py
deeplearning.ai/practical_ai_agents/project_estimation_code/: L_1.py  Project Estimation.ipynb  pyproject.toml  requirements.txt
deeplearning.ai/research/: pyproject.toml
deeplearning.ai/research/research/: research.py
