[project]
name = "summarize_web_page"
version = "0.1.0"
description = "summarize_web_page using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
summarize_web_page = "summarize_web_page.main:run"
run_crew = "summarize_web_page.main:run"
train = "summarize_web_page.main:train"
replay = "summarize_web_page.main:replay"
test = "summarize_web_page.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
