[tool.poetry]
name = "job-application"
version = "0.1.0"
description = ""
authors = ["sanjuantony <sanjuantony@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
pendulum = "^3.0.0"
crewai = "^0.86.0"
crewai-tools = "^0.17.0"
langchain-community = "^0.3.13"
utils = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
