[tool.poetry]
name = "job-application"
version = "0.1.0"
description = ""
authors = ["sanjuantony <sanjuantony@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
crewai = "^0.102.0"
crewai-tools = "^0.36.0"
langchain-community = "^0.3.17"
utils = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
