[tool.poetry]
name = "project_estimation_code"
version = "0.1.0"
description = ""
authors = ["sanjuantony <sanjuantony@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.8"
crewai = "^0.100.1"
crewai-tools = "^0.33.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
